# snailcrypt

./: Cargo.toml  Makefile  README.md  cbindgen.toml
ctest/: main.c
src/: lib.rs
src/client/: client.rs  config.rs  default_client.rs  mod.rs  v1_client.rs  v2_client.rs  v3_client.rs  version_selector_client.rs
src/config/: config.rs  default_config.rs  mod.rs
src/factory/: analyzer_factory.rs  client_factory.rs  config_factory.rs  mod.rs
src/util/: analyzer.rs  default_analyzer.rs  mod.rs
