[package]
name = "snailcrypt"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Library to access api.snailcrypt.com"
authors = [ "Richard Bäck <richard.baeck@snailcrypt.com>" ]
repository = "https://github.com/ritschmaster/snailcrypt"

[lib]
name = "snailcrypt"
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = "0.4.23"
curl = "0.4.44"
serde_json = "1.0.87"
base64 = "0.13.1"
openssl = "0.10.42"
url = "2.3.1"

[build-dependencies]
cbindgen = "0.24.3"
