[package]
name = "snailcrypt"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Library to access api.snailcrypt.com"
authors = [ "Richard Bäck <richard.baeck@snailcrypt.com>" ]
repository = "https://github.com/ritschmaster/snailcrypt"

[lib]
name = "snailcrypt"
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
base64 = "0.13.1"
chrono = "0.4.23"
curl = "0.4.44"
openssl = "0.10.42"
serde_json = "1.0.87"
url = "2.3.1"

[build-dependencies]
cbindgen = "0.24.3"
